--- a/after_login/css/dokter.css
+++ b/after_login/css/dokter.css
@@ -46,8 +46,8 @@ body {
     padding: 0px;
     gap: 50px;
 
-    width: 940px;
-    height: 1509px;
+    /*width: 940px;*/
+    /*height: 1509px;*/
 
     /* Inside auto layout */
     flex: none;
@@ -64,7 +64,7 @@ body {
     gap: 25px;
     margin-top: 100px;
     width: 940px;
-    height: 1409px;
+    /*height: 1409px;*/
     
     /* Inside auto layout */
     flex: none;
