--- a/chat/lib/template/loggedIn.html
+++ b/chat/lib/template/loggedIn.html
@@ -200,16 +200,16 @@
 
 <body class="ajax-chat">
 	<div id="content">
-		<h1 id="headline">[LANG]title[/LANG]</h1>
+		<h1 id="headline">Chat [CHANNEL/]</h1>
 		<div id="logoutChannelContainer">
 			<input type="button" id="logoutButton" value="[LANG]logout[/LANG]" onclick="ajaxChat.logout();"/>
 			<div id="logoutChannelInner">
-				<label for="channelSelection">[LANG]channel[/LANG]:</label>
-				<select id="channelSelection" onchange="ajaxChat.switchChannel(this.options[this.selectedIndex].value);">[CHANNEL_OPTIONS/]</select>
+<!--				<label for="channelSelection">[LANG]channel[/LANG]:</label>-->
+<!--				<select id="channelSelection">[CHANNEL_OPTIONS/]</select>-->
 				<label for="styleSelection">[LANG]style[/LANG]:</label>
 				<select id="styleSelection" onchange="ajaxChat.setActiveStyleSheet(ajaxChat.getSelectedStyle());">[STYLE_OPTIONS/]</select>
-				<label for="languageSelection">[LANG]language[/LANG]:</label>
-				<select id="languageSelection" onchange="ajaxChat.switchLanguage(this.value);">[LANGUAGE_OPTIONS/]</select>
+<!--				<label for="languageSelection">[LANG]language[/LANG]:</label>-->
+<!--				<select id="languageSelection" onchange="ajaxChat.switchLanguage(this.value);">[LANGUAGE_OPTIONS/]</select>-->
 			</div>
 			<input type="image" src="img/pixel.gif" class="button" id="showChannelsButton" alt="[LANG]toggleHelp[/LANG]"/>
 		</div>
